# candyland-dx

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  Dockerfile.slim  Trunk.toml  index.html  nginx.conf  package-lock.json  tailwind.css
.github/workflows/: build.yml  dioxus.yml
assets/: tailwind.css
src/: cards.rs  main.rs
styles/: tailwind.css
