[package]
name = "candyland-dx"
version = "0.1.0"
authors = ["Steven Carter <steve@javapl.us>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9"

# Optimize the release wasm bundle for size — this ships to the browser.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
